tests/positive/Termination/TreeGen.juvix
module TreeGen;

import Stdlib.Prelude open;

type Tree :=
  | leaf : Tree
  | node : Tree → Tree → Tree;

gen : Nat → Tree
  | zero := leaf
  | (suc zero) := node leaf leaf
  | (suc (suc n')) := node (gen n') (gen (suc n'));

gen2 : Nat → Tree
  | zero := leaf
  | (suc zero) := node leaf leaf
  | (suc n@(suc n')) := node (gen2 n') (gen2 n);
