tests/negative/Internal/Positivity/E4.juvix
module E4;

type Tree (A : Type) :=
  leaf : Tree A |
  node : (A -> Tree A) -> Tree A;

type Bad :=
  bad : Tree Bad -> Bad;

end;
